Coded fgetwd and fchdir.
git-svn-id: http://darwin/svn/unix/chpp/trunk@125 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/Makefile.sys.linux
+++ b/Makefile.sys.linux
@@ -24,7 +24,7 @@
 #ENABLE_MSQL=yes
 
 # If you want support for MySQL, uncomment the following two lines
-#ENABLE_MYSQL=yes
+ENABLE_MYSQL=yes
 
 CC=gcc
 CFLAGS=-g -Wall -D_LINUX
