A lot of revisions go by (mondoshawan CVS down).
git-svn-id: http://darwin/svn/unix/chpp/trunk@142 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/config.h.in
+++ b/config.h.in
@@ -21,6 +21,10 @@
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
+/* Define if your processor stores words with the most significant
+   byte first (like Motorola and SPARC, unlike Intel and VAX).  */
+#undef WORDS_BIGENDIAN
+
 /* Define if lex declares yytext as a char * by default, not a char[].  */
 #undef YYTEXT_POINTER
 
@@ -28,6 +32,12 @@
 #undef VERSION
 #undef HAVE_LIBMYSQLCLIENT
 #undef HAVE_LIBMSQL
+
+/* The number of bytes in a int.  */
+#undef SIZEOF_INT
+
+/* The number of bytes in a long.  */
+#undef SIZEOF_LONG
 
 /* Define if you have the getcwd function.  */
 #undef HAVE_GETCWD
@@ -40,3 +50,6 @@
 
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
+
+/* Define if you have the crypt library (-lcrypt).  */
+#undef HAVE_LIBCRYPT
