--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,2 +1,2 @@
-chppinclude_DATA = cgi.chh files.chh list.chh sql.chh strings.chh time.chh
-EXTRA_DIST = cgi.chh files.chh list.chh sql.chh strings.chh time.chh
+chppinclude_DATA = cgi.chh files.chh list.chh sql.chh strings.chh time.chh w3lib.chh
+EXTRA_DIST = cgi.chh files.chh list.chh sql.chh strings.chh time.chh w3lib.chh
