--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(main.c)
-AM_INIT_AUTOMAKE(chpp, 0.3.4)
+AM_INIT_AUTOMAKE(chpp, 0.3.6)
 AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
@@ -16,6 +16,7 @@ AC_PROG_INSTALL
 dnl Checks for libraries.
 AM_PATH_MYSQL
 AM_PATH_MSQL
+AC_CHECK_LIB(crypt,crypt)
 
 dnl Checks for header files.
 AC_HEADER_STDC
@@ -29,6 +30,9 @@ AC_TYPE_SIGNAL
 AC_STRUCT_ST_BLKSIZE
 AC_STRUCT_ST_BLOCKS
 dnl AC_STRUCT_TM
+AC_C_BIGENDIAN
+AC_CHECK_SIZEOF(int,4)
+AC_CHECK_SIZEOF(long,4)
 
 dnl Checks for library functions.
 dnl AC_FUNC_ALLOCA
