Fixed some bugs. Added some new features.
git-svn-id: http://darwin/svn/unix/chpp/trunk@143 cefd48d6-89e4-0310-8b86-be731dd2b999

--- a/config.h.in
+++ b/config.h.in
@@ -32,6 +32,8 @@
 #undef VERSION
 #undef HAVE_LIBMYSQLCLIENT
 #undef HAVE_LIBMSQL
+#undef USE_FCNTL
+#undef USE_FLOCK
 
 /* The number of bytes in a int.  */
 #undef SIZEOF_INT
