--- a/configure.in
+++ b/configure.in
@@ -46,4 +46,13 @@ chppincludedir=$libdir/chpp/include
 AC_SUBST(chppincludedir)
 dnl AC_DEFINE_UNQUOTED(CHPP_INCLUDEDIR, "$prefix/lib/chpp/include")
 
+chpp_cv_fcntl=yes
+AC_ARG_ENABLE(fcntl, [  --disable-fcntl         Use flock() instead of fcntl to lock files ],
+	[if test $enableval = no; then chpp_cv_fcntl=no; fi])
+if test $chpp_cv_fcntl = yes; then
+	AC_DEFINE(USE_FCNTL)
+else
+	AC_DEFINE(USE_FLOCK)
+fi
+
 AC_OUTPUT(Makefile builtins/Makefile builtins/database/Makefile include/Makefile doc/Makefile)
