--- a/builtins/database/Makefile.am
+++ b/builtins/database/Makefile.am
@@ -2,4 +2,4 @@ noinst_LIBRARIES = libdatabase.a
 
 libdatabase_a_SOURCES = database.c database.h msql.c mysql.c
 
-INCLUDES = @MYSQL_CFLAGS@ @MSQL_CFLAGS@
+AM_CPPFLAGS = @MYSQL_CFLAGS@ @MSQL_CFLAGS@
